# tech-journey

./: .gitignore
algorithm/: 0001-1000.md  1001-2000.md  2001-3000.md  Cargo.toml  algo.code-workspace  array.md  backtracking.md  binary-heap.md  binary-search-tree.md  binary-search.md  bit-manipulation.md  breadth-first-search.md  concurrency.md  depth-first-search.md  design.md  dynamic-programming.md  geometry.md  graph.md  greedy.md  hash-table.md  linked-list.md  math.md  queue.md  recursion.md  shell-script.md  simulation.md  sort.md  sql.md  stack.md  string.md  tree.md  two-pointers.md
algorithm/golang/: 0094_binary_tree_inorder_traversal.go  0094_binary_tree_inorder_traversal_test.go  0099_recover_binary_search_tree.go  0099_recover_binary_search_tree_test.go  0145_binary_tree_postorder_traversal.go  0145_binary_tree_postorder_traversal_test.go  0501_find_mode_in_binary_search_tree.go  0501_find_mode_in_binary_search_tree_test.go  0589_n_ary_tree_preorder_traversal.go  0589_n_ary_tree_preorder_traversal_test.go  channel_test.go  circuit_breaker.go  circuit_breaker_test.go  contains_duplicate.go  contains_duplicate_test.go  go.mod  linked_list.go  linked_list_test.go  queue.go  queue_test.go  rate_limiter.go  rate_limitter_test.go  two_sum.go  two_sum_test.go  valid_anagram.go
algorithm/kotlin/: settings.gradle.kts
algorithm/problems/: 0001-two-sum.md  0003-longest-substring-without-repeating.md  0004-median-of-two-sorted-arrays.md  0015-3sum.md  0016-3sum-closest.md  0018-4sum.md  0019-remove-nth-node-from-end-of-list.md  0021-merge-two-sorted-lists.md  0023-merge-k-sorted-lists.md  0025-reverse-nodes-in-k-group.md  0030-substring-concatenation-words.md  0033-search-in-rotated-sorted-array.md  0034-find-first-and-last-position-of-element-in-sorted-array.md  0035-search-insert-position.md  0036-valid-sudoku.md  0049-group-anagrams.md  0056-merge-intervals.md  0057-insert-interval.md  0069-sqrtx.md  0074-search-a-2d-matrix.md  0075-sort-colors.md  0076-minimum-window-substring.md  0081-search-in-rotated-sorted-array-ii.md  0082-remove-duplicates-from-sorted-list-ii.md  0083-remove-duplicates-from-sorted-list.md  0086-partition-list.md  0088-merge-sorted-array.md  0092-reverse-linked-list-ii.md  0094-binary-tree-inorder-traversal.md  0099-recover-binary-search-tree.md  0141-linked-list-cycle.md  0142-linked-list-cycle-ii.md  0143-reorder-list.md  0144-binary-tree-preorder-traversal.md  0145-binary-tree-postorder-traversal.md  0146-lru-cache.md  0147-insertion-sort-list.md  0148-sort-list.md  0149-max-points-on-a-line.md  0153-find-minimum-in-rotated-sorted-array.md  (+689 more)
algorithm/python/: README.md
algorithm/rust/: Cargo.toml
algorithm/src/: lib.rs  rust_syntax.rs
algorithm/typescript/: package-lock.json  package.json
binance/go/: constant.go  env.example  env.go  go.mod
chart/plotters/: README.md  plotters_1.ipynb
chart/plotters/wasm_rhai/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
chart/plotters/wasm_rhai/example-scripts/: fibonacci.rhai  power.rhai
chart/plotters/wasm_rhai/js/: bootstrap.js  index-old.js  index.html  index.js  playground-runner.js  playground.vue  style.css  wasm_loader.js  worker.js
chart/plotters/wasm_rhai/js/components/: SplittableTabs.vue  TabItem.vue  editor.vue
chart/plotters/wasm_rhai/src/: canvas_utils.rs  func_plot.rs  lib.rs  playground.rs  scripting.rs
chart/plotters/wasm_rhai/www/: bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
custom-elements/http/: qs-zod.md
data-intensive/: README.md
design/: rust_apache_arrow.md
design/cocoindex/: incremental-update.md  memorization.md  primary-logic-flow.md  schema.md
design/http/: qs-zod-golang.md  qs-zod-typescript.md
design/picoclaw/: agent-module.md  heardbeat.md  interactive-server-mode.md  (+1 more)
grpc-http/: go.mod  go.sum
linux-api/daemon/: CMakeLists.txt  README.md  forking-daemon.service  simple-daemon.service
linux-api/daemon/src/: CMakeLists.txt  daemon.c  ipc_socket.c  ipc_socket.h  log.h
openapi/: Makefile  README.md
ory/: .env  .gitignore  README.md  docker-compose.yml  kong.config.sh
rust/library-multiple-platforms/crates/lib1/: Cargo.toml
rust/library-multiple-platforms/crates/lib1/src/: bridge_echo.rs  bridge_echo_wasm.rs  counter.rs  counter_wasm.rs  lib.rs  lib.udl
rust/library-multiple-platforms/crates/shared_types/: Cargo.toml  build.rs
rust/library-multiple-platforms/crates/shared_types/src/: lib.rs
todos/: README.md  docker-compose.yaml  go.work  go.work.sum
webassembly/: README.md
(+332 files in other folders)
