[package]
name = "lib1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "lib1"


[features]
typegen = ["crux_core/typegen"]

[dependencies]
crux_core.workspace = true
wasm-bindgen.workspace = true
serde = { workspace = true, features = ["derive"] }
uniffi = "0.26.1"
lazy_static = "1.4"
macros = { path = "../macros" }


[build-dependencies]
uniffi = { version = "0.26.1", features = ["build"] }

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.26.1", features = ["cli"] }