[package]
name = "shared_types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
anyhow.workspace = true
crux_core = { version = "0.7", features = ["typegen"] }
lib1 = { path = "../lib1", features = ["typegen"] }